// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.catalog.rpc";

import "common/common.proto";

message ResolveCatalogRequest {
  ai.floedb.floecat.common.NameRef ref = 1;
}
message ResolveCatalogResponse
{
  ai.floedb.floecat.common.ResourceId resource_id = 1;
}
message LookupCatalogRequest {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
}
message LookupCatalogResponse {
  string display_name = 1;
}

message ResolveNamespaceRequest {
  ai.floedb.floecat.common.NameRef ref = 1;
}
message ResolveNamespaceResponse {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
}
message LookupNamespaceRequest {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
}
message LookupNamespaceResponse {
  ai.floedb.floecat.common.NameRef ref = 1;
}

message ResolveTableRequest {
  ai.floedb.floecat.common.NameRef ref = 1;
}
message ResolveTableResponse {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
}

message ResolveFQTablesRequest {
  oneof selector {
    NameList list = 1;
    ai.floedb.floecat.common.NameRef prefix = 2;
  }
  ai.floedb.floecat.common.PageRequest page = 10;
}

message NameList {
  repeated ai.floedb.floecat.common.NameRef names = 1;
}

message ResolveFQTablesResponse {
  message Entry {
    ai.floedb.floecat.common.ResourceId resource_id = 1;
    ai.floedb.floecat.common.NameRef name = 2;
  }
  repeated Entry tables = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message LookupTableRequest {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
}
message LookupTableResponse {
  ai.floedb.floecat.common.NameRef name = 1;
}

message ResolveViewRequest {
  ai.floedb.floecat.common.NameRef ref = 1;
}
message ResolveViewResponse {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
}

message ResolveFQViewsRequest {
  oneof selector {
    NameList list = 1;
    ai.floedb.floecat.common.NameRef prefix = 2;
  }
  ai.floedb.floecat.common.PageRequest page = 10;
}

message ResolveFQViewsResponse {
  message Entry {
    ai.floedb.floecat.common.ResourceId resource_id = 1;
    ai.floedb.floecat.common.NameRef name = 2;
  }
  repeated Entry views = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message LookupViewRequest {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
}
message LookupViewResponse {
  ai.floedb.floecat.common.NameRef name = 1;
}

// ----- Services -----

service DirectoryService {
  rpc ResolveCatalog(ResolveCatalogRequest) returns (ResolveCatalogResponse);
  rpc LookupCatalog(LookupCatalogRequest) returns (LookupCatalogResponse);

  rpc ResolveNamespace(ResolveNamespaceRequest) returns (ResolveNamespaceResponse);
  rpc LookupNamespace(LookupNamespaceRequest) returns (LookupNamespaceResponse);

  rpc ResolveTable(ResolveTableRequest) returns (ResolveTableResponse);
  rpc ResolveFQTables(ResolveFQTablesRequest) returns (ResolveFQTablesResponse);
  rpc LookupTable(LookupTableRequest) returns (LookupTableResponse);

  rpc ResolveView(ResolveViewRequest) returns (ResolveViewResponse);
  rpc ResolveFQViews(ResolveFQViewsRequest) returns (ResolveFQViewsResponse);
  rpc LookupView(LookupViewRequest) returns (LookupViewResponse);
}
